# OpgaverP1

./: CMakeLists.txt  README.md  ROS robot-pc kommunikation  package.xml
src/: Algorithm.cpp  Averagenumber.cpp  Hanoi.cpp  Money.cpp  QuickSort.cpp  Recursion1.cpp  RecusionTask.cpp  Smallest.cpp  Smallnumber.cpp  Sorter.cpp  Test.cpp  TreeSort.cpp  Turtleroundweeee.cpp  functions.cpp  helloworld.cpp  struct.cpp
